@startuml data_model
title Translation Pipeline - Core Data Model

skinparam DefaultFontName "Helvetica"
skinparam shadowing false
skinparam class {
  BackgroundColor #FAFAFA
  BorderColor #888
  ArrowColor #555
}
hide empty members

class TranslationState <<TypedDict>> {
  + Path input_path
  + Path output_path
  + str font
  + bool review
  + bool verbose
  + LLMClient client
  + Document doc
  + list~ParagraphRecord~ records
  + list~Chunk~ chunks_body
  + list~Chunk~ chunks_abstract
  + list~Chunk~ chunks_claims
  + dict~str,str~ glossary
}

class ParagraphRecord {
  + int index
  + ParagraphKind kind
  + Any para         // python-docx paragraph
  + str raw
  + str section
  + str mapped
  + int claim_num
  + bool mixed       // text + equation/drawing
}

class Chunk {
  + str id
  + str section
  + Literal kind             // body | abstract | claim
  + list~int~ paragraph_indices
  + str text                 // joined Korean
  + int claim_num
  + str translation          // filled by translate_*

  -- claim-only fields (filled by chunk_claims) --
  + ClaimKind claim_kind     // device | method | crm | system
  + bool is_independent
  + list~int~ parent_claim_nums
  + MultiParent multi_parent_kind  // single | or | range
  + str noun_phrase          // filled after parent indep is translated
}

class ClaimSpec {
  + int claim_num
  + ClaimKind claim_kind
  + bool is_independent
  + list~int~ parent_claim_nums
  + MultiParent multi_parent_kind
}

class PreambleSpec {
  + int claim_num
  + ClaimKind claim_kind
  + str noun_phrase           // "semiconductor device" / "method" / ...
  + str actor_phrase          // CRM/system: "processor" / "system"
}

class Prompt {
  + str name
  + str system
}

class LLMClient {
  + ClientConfig config
  + complete(messages) str
}

class ClientConfig {
  + str model
  + str base_url
  + str api_key
  + float temperature
  + int max_tokens
}

TranslationState "1" o-- "*" ParagraphRecord
TranslationState "1" o-- "*" Chunk
Chunk ..> ParagraphRecord : paragraph_indices

ClaimSpec ..> Chunk : populates\nclaim_kind / is_independent / parents
PreambleSpec ..> Chunk : produced from indep translation,\nconsumed by dependents

LLMClient --> ClientConfig
LLMClient ..> Prompt : sends Prompt.system + user
@enduml
